<resources>
    <string name="app_name">Student Management App</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="student_name">Student Name</string>
    <string name="student_class">Class</string>
    <string name="student_id">Student ID</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_class">Enter class</string>
    <string name="enter_id">Enter ID</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading...</string>
    <string name="logout">Logout</string>
    <string name="title_teacher_dashboard">Teacher Dashboard</string>
    <string name="title_student_dashboard">Student Dashboard</string>
    <string name="manage_students">Manage Students</string>
    <string name="manage_classes">Manage Classes</string>
    <string name="manage_assignments">Manage Assignments</string>
    <string name="review_submissions">Review Submissions</string>
    <string name="my_assignments">My Assignments</string>
    <string name="my_classes">My Classes</string>
    <string name="my_grades">My Grades</string>
    <string name="my_profile">My Profile</string>
    <string name="email_optional">Email (Optional)</string>
    <string name="enter_email_optional">Enter email to link to user</string>
    <string name="add_student">Add Student</string>
    <string name="edit_student">Edit Student</string>
    <string name="add_class">Add Class</string>
    <string name="edit_class">Edit Class</string>
    <string name="class_name">Class Name</string>
    <string name="enter_class_name">Enter class name</string>
    <string name="save_assignments">Save Assignments</string>
    <string name="no_classes_available">No classes available</string>
    <string name="no_students_available">No students available</string>
    <string name="default_web_client_id">779412800115-fblhc53j72so8jbkinctd2s6ks8sbm2o.apps.googleusercontent.com</string>
    <string name="class_added">Class added successfully</string>
    <string name="class_updated">Class updated successfully</string>
    <string name="please_enter_class_name">Please enter class name</string>
    <string name="class_details">Class Details</string>
    <string name="students_in_class">Students in Class</string>
    <string name="no_students_in_this_class">No students in this class</string>
    <string name="assign_students">Assign Students</string>
    <string name="delete_class">Delete Class</string>
    <string name="share_code_with_students">Share this code with your students to join the class</string>
    <string name="student_email">Student Email</string>
    <string name="invite_student_hint">The student will receive an invitation to join this class</string>
    <string name="student_count">Students: %d</string>
    <string name="student_count_detail">Total: %1$d (%2$d enrolled, %3$d invited)</string>
</resources>